<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options_activity_option_layout"
    android:layout_width="@dimen/options_layout_width"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="@dimen/elevation_3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <View
        android:id="@+id/options_image_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_view_height"
        android:background="@drawable/options_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_activity_text_settings_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:fontFamily="monospace"
        android:text="@string/options"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_28"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/options_image_id" />

    <ImageView
        android:id="@+id/options_icon_user_info_id"
        android:layout_width="@dimen/options_icon_size"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_logged_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_activity_text_settings_id" />

    <TextView
        android:id="@+id/settings_activity_text_clear_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintStart_toEndOf="@+id/options_icon_user_info_id"
        app:layout_constraintTop_toTopOf="@+id/options_icon_user_info_id" />

    <ImageView
        android:id="@+id/options_icon_settings_activity_id"
        android:layout_width="@dimen/options_icon_size"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_settings_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_icon_user_info_id" />

    <TextView
        android:id="@+id/options_text_settings_activity_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/settings"
        app:layout_constraintStart_toEndOf="@+id/options_icon_exit_id"
        app:layout_constraintTop_toBottomOf="@+id/settings_activity_text_clear_id" />

    <ImageView
        android:id="@+id/options_icon_exit_id"
        android:layout_width="@dimen/options_icon_size"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_icon_settings_activity_id" />

    <TextView
        android:id="@+id/options_text_exit_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/exit_app"
        app:layout_constraintStart_toEndOf="@+id/options_icon_exit_id"
        app:layout_constraintTop_toBottomOf="@+id/options_icon_settings_activity_id" />

    <ImageView
        android:id="@+id/options_icon_logout_id"
        android:layout_width="@dimen/options_icon_size"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_exit_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_icon_exit_id" />

    <TextView
        android:id="@+id/options_text_logout_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/logout_app"
        app:layout_constraintStart_toEndOf="@+id/options_icon_logout_id"
        app:layout_constraintTop_toBottomOf="@+id/options_text_exit_id" />

    <ImageView
        android:id="@+id/options_icon_help_app_id"
        android:layout_width="@dimen/options_icon_size"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_icon_logout_id" />

    <TextView
        android:id="@+id/options_text_help_app_id"
        style="@style/TextAppearanceOptions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/options_icon_size"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/about_app"
        app:layout_constraintStart_toEndOf="@+id/options_icon_help_app_id"
        app:layout_constraintTop_toBottomOf="@+id/options_text_logout_id" />

</androidx.constraintlayout.widget.ConstraintLayout>