<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_text_email_layout_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_huge"
        android:hint="@string/enter_email"
        android:textColorHint="@color/colorBlue"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorBlue"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_activity_text_email_edit_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true"
            android:textColor="@color/colorBlue"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/TextInputEditTextStyle"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_activity_text_password_layout_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/enter_password"
        android:textColorHint="@color/colorBlue"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorBlue"
        app:boxStrokeWidth="@dimen/margin_medium"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_text_email_layout_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_activity_text_password_edit_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionDone"
            android:inputType="textPassword|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true"
            android:textColor="@color/colorBlue"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/TextInputEditTextStyle"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_activity_button_login_id"
        android:layout_width="@dimen/button_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/button_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_text_password_layout_id" />

    <TextView
        android:id="@+id/main_activity_sign_in_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:focusedByDefault="true"
        android:text="@string/text_view_sign_in"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_login_id" />

    <ProgressBar
        android:id="@+id/main_activity_progressbar"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_marginTop="@dimen/margin_small"
        android:elevation="@dimen/elevation_1"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_sign_in_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_login_id" />

    <ImageView
        android:id="@+id/main_activity_touch_image_id"
        android:layout_width="@dimen/touch_image_dimen"
        android:layout_height="@dimen/touch_image_dimen"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:src="@drawable/ic_touch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_sign_in_id"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/main_activity_background_image_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="fitXY"
        android:src="@drawable/background_main_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_activity_reset_password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/text_view_reset_password_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_touch_image_id" />

</androidx.constraintlayout.widget.ConstraintLayout>