<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@color/dirtyWhite"
    tools:context=".ui.RegistrationActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email_register_activity_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_email"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorLightButtons"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_registration_email_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/textInputEditTextStyle"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_login_register_activity_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/log_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/enter_password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorLightButtons"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textInputLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email_register_activity_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_registration_password_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/log_field_height"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_medium"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:theme="@style/textInputEditTextStyle"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="250dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_registration_id"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/button_register"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_login_register_activity_id" />

    <ProgressBar
        android:id="@+id/progressbar_registration_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        android:elevation="@dimen/elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button_register_activity_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_back"
        android:src="@drawable/ic_backspace_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>